Make overflow of seletec List hidden. #23

--- a/app/views/partials/ruleEditor.jade
+++ b/app/views/partials/ruleEditor.jade
@@ -62,7 +62,7 @@
                                         .col-sm-4
                                             label(tooltip-html='htmlTooltipCondition', tooltip-class='tooltipCustomWidth') JS expression
                                         .col-sm-8
-                                            .js-editor-small(resizable='')
+                                            .js-editor-medium(resizable='')
                                                 div(required='', name='conditionExpression', ui-ace="{require: ['ace/ext/language_tools'],\
                            advanced: {\
                            enableSnippets: true,\
@@ -73,7 +73,7 @@
                                     .form-group
                                         label.col-sm-4 Write a JSON example
                                         .col-sm-8
-                                            .js-editor-small(resizable='')
+                                            .js-editor-medium(resizable='')
                                                 div(ui-ace="{require: ['ace/ext/language_tools'],\
                            advanced: {\
                            enableSnippets: true,\
@@ -161,7 +161,7 @@
                                         .col-sm-4
                                             label(tooltip-html='htmlTooltipTransformation', tooltip-class='tooltipCustomWidth') JS expression *
                                         .col-sm-8
-                                            .js-editor-small(resizable='')
+                                            .js-editor-medium(resizable='')
                                                 div(required='', name='tansformationExpression', ui-ace="{require: ['ace/ext/language_tools'],\
                                    advanced: {\
                                    enableSnippets: true,\
@@ -172,7 +172,7 @@
                                     .form-group(show-errors='')
                                         label.col-sm-4 Write a JSON sample *
                                         .col-sm-8
-                                            .js-editor-small(resizable='')
+                                            .js-editor-medium(resizable='')
                                                 div(required='', name='tansformationSampleEvent', ui-ace="{require: ['ace/ext/language_tools'],\
                                    advanced: {\
                                    enableSnippets: true,\
