--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -162,3 +162,9 @@ div[resizable]
 .ui-select-match
   overflow hidden
 
+.ui-select-bootstrap
+  text-overflow ellipsis
+
+.modal-body
+  overflow auto
+
