Ace editor refresh after resize div #24. For that, call the digest fonction $apply() on the event resizestop.

--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -137,22 +137,25 @@ html
 .js-editor-small
   height 60px
   width 100%
+  resize: both;
 
 .js-editor-medium
   height 180px
+  max-width 650px
+
 
 .tooltip.tooltipCustomWidth .tooltip-inner
   max-width 500px
   width 500px
   text-align left
 
-.tooltip.tooltipCustomWidth .tooltip-arrow {
+.tooltip.tooltipCustomWidth .tooltip-arrow
   display none
-}
+
 
 
 div[resizable]
-  width 100%
+
 
 .form-group
   padding-left 10px
