--- a/app/views/partials/actionTargetEditor.jade
+++ b/app/views/partials/actionTargetEditor.jade
@@ -14,6 +14,11 @@
                             label.col-sm-4.control-label(for="description") Description
                             .col-sm-8
                                 input#description.form-control(type="text", name="description", placeholder="Human readable description", ng-model="aTarget.description")
+                        .form-group
+                            label.col-sm-4.control-label(for="templatePublic") Make it public
+                            .col-sm-8
+                                div
+                                    input#templatePublic(type="checkbox", ng-model="aTarget.public")
                 .col-lg-6
                     h3 Schema
                     .form-group
