--- a/app/views/partials/eventSourceEditor.jade
+++ b/app/views/partials/eventSourceEditor.jade
@@ -18,6 +18,11 @@
                             label.col-sm-4.control-label(for="description") Description
                             .col-sm-8
                                 input#description.form-control(type="text", name="description", placeholder="Human readable description", ng-model="eSource.description")
+                        .form-group
+                            label.col-sm-4.control-label(for="templatePublic") Make it public
+                            .col-sm-8
+                                div
+                                    input#templatePublic(type="checkbox", ng-model="eSource.public")
                 .col-lg-6
                     h3 Schema
                     .form-group
@@ -35,5 +40,5 @@
                     strong Error!
                     | {{errorMessage}}
             .buttonbar
-                a.btn.btn-primary(ng-click="cancel()") Cancel
-                a.btn.btn-success(ng-click="submitForm()", ng-disabled="eventSourceForm.$invalid") {{buttonName}}
+                a.btn.btn-primary(type="button", ng-click="cancel()") Cancel
+                a.btn.btn-success(type="submit", ng-click="submitForm()", ng-disabled="eventSourceForm.$invalid") {{buttonName}}
