fix error display on Authentification

--- a/app/views/partials/ruleEditor.jade
+++ b/app/views/partials/ruleEditor.jade
@@ -201,7 +201,7 @@
                                         b Event
                                         ul
                                             li event.timestamp
-                                            li(ng-hide="!helpTransformationEventTypeForm[$index].schema.properties") event.properties
+                                            li event.properties
                                             script(type='text/ng-template', id='field_renderer.html').
                                                 {{id}}
                                                 <ul>
